--- a/index.html
+++ b/index.html
@@ -23,36 +23,36 @@
     <div class="row justify-content-center">
 
       <!-- PANEL 1 -->
-      <div class="col-md-5 col-sm-12" id="VoucherHide">
+      <div class="col-md-5 col-sm-12">
         <div class="card-panel">
           <p class="title">Voucher</p>
 
           <div class="input-SBiller">
             <label>114</label>
-            <input type="text" class="form-control" id="txtSaldoP114" disabled />
+            <input type="text" class="form-control VoucherHide" id="txtSaldoP114" disabled />
           </div>
 
           <div class="input-SBiller">
             <label>Kuwais</label>
-            <input type="text" class="form-control" id="txtSaldoKws" required />
+            <input type="text" class="form-control VoucherHide" id="txtSaldoKws" required />
           </div>
 
           <div class="input-SBiller">
             <label>MMI</label>
-            <input type="text" class="form-control" id="txtSaldoMMI" required />
+            <input type="text" class="form-control VoucherHide" id="txtSaldoMMI" required />
           </div>
 
           <div class="input-SBiller">
             <label>PPM</label>
-            <input type="text" class="form-control" id="txtSaldoPPM" required />
+            <input type="text" class="form-control VoucherHide" id="txtSaldoPPM" required />
           </div>
 
           <div class="input-SBiller">
             <label>E-Money</label>
-            <input type="text" class="form-control" id="txtSaldoEM" required />
+            <input type="text" class="form-control VoucherHide" id="txtSaldoEM" required />
           </div>
 
-          <div class="input-SBiller">
+          <div class="input-SBiller_NonHide">
             <label>E-Wallet Dana</label>
             <input type="text" class="form-control" id="txtSaldoDn" required />
           </div>
@@ -67,42 +67,42 @@
           <div class="row">
 
             <div class="col-md-6">
-              <div class="input-SBiller">
+              <div class="input-SBiller_NonHide">
                 <label>Bimasakti</label>
                 <input type="text" class="form-control" id="txtSaldoBima" required />
               </div>
 
-              <div class="input-SBiller">
+              <div class="input-SBiller_NonHide">
                 <label>Teleanjar</label>
                 <input type="text" class="form-control" id="txtSaldoTeleanjar" required />
               </div>
 
-              <div class="input-SBiller">
+              <div class="input-SBiller_NonHide">
                 <label>Delima - Finnet</label>
                 <input type="text" class="form-control" id="txtSaldoDelima" required />
               </div>
 
-              <div class="input-SBiller">
+              <div class="input-SBiller_NonHide">
                 <label>DJI - FIF</label>
                 <input type="text" class="form-control" id="txtSaldoDJI" required />
               </div>
 
-              <div class="input-SBiller">
+              <div class="input-SBiller_NonHide">
                 <label>Pluslink - MF</label>
                 <input type="text" class="form-control" id="txtSaldoPluslinkMF" required />
               </div>
 
-              <div class="input-SBiller">
+              <div class="input-SBiller_NonHide">
                 <label>Mitracom</label>
                 <input type="text" class="form-control" id="txtSaldoMitracom" required />
               </div>
  
-              <div class="input-SBiller">
+              <div class="input-SBiller_NonHide">
                 <label>PDAM Indramayu</label>
                 <input type="text" class="form-control" id="txtSaldoPamIndramayu" required />
               </div>
 
-              <div class="input-SBiller">
+              <div class="input-SBiller_NonHide">
                 <label>PDAM AJN</label>
                 <input type="text" class="form-control" id="txtSaldoAJN" required />
               </div>
@@ -110,42 +110,42 @@
             </div>
 
             <div class="col-md-6">
-              <div class="input-SBiller">
+              <div class="input-SBiller_NonHide">
                 <label>GSP</label>
                 <input type="text" class="form-control" id="txtSaldoGSP" required />
               </div>
 
-              <div class="input-SBiller">
+              <div class="input-SBiller_NonHide">
                 <label>PT POS</label>
                 <input type="text" class="form-control" id="txtSaldoPTPOS" required />
               </div>
 
-              <div class="input-SBiller">
+              <div class="input-SBiller_NonHide">
                 <label>ArtaJasa - MBA</label>
                 <input type="text" class="form-control" id="txtArtaJasaMBA" required />
               </div>
 
-              <div class="input-SBiller">
+              <div class="input-SBiller_NonHide">
                 <label>ArtaJasa - VSI</label>
                 <input type="text" class="form-control" id="txtArtaJasaVSI" required />
               </div>
 
-              <div class="input-SBiller">
+              <div class="input-SBiller_NonHide">
                 <label>Arindo - PDAM</label>
                 <input type="text" class="form-control" id="txtArindo" required />
               </div>
 
-              <div class="input-SBiller">
+              <div class="input-SBiller_NonHide">
                 <label>LinkQU - Transfer Uang</label>
                 <input type="text" class="form-control" id="txtLinkQU" required />
               </div>
 
-              <div class="input-SBiller">
+              <div class="input-SBiller_NonHide">
                 <label>E-Wallet Ovo</label>
                 <input type="text" class="form-control" id="txtOvo" required />
               </div>
 
-              <div class="input-SBiller">
+              <div class="input-SBiller_NonHide">
                 <label>Tokopedia - Gopay</label>
                 <input type="text" class="form-control" id="txtTokpedGopay" required />
               </div>
