--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             <input type="text" class="form-control VoucherHide" id="txtSaldoP114" disabled />
           </div>
 
-          <div class="input-SBiller">
+          <!-- <div class="input-SBiller">
             <label>Kuwais</label>
             <input type="text" class="form-control VoucherHide" id="txtSaldoKws" required />
-          </div>
+          </div> -->
 
           <div class="input-SBiller">
             <label>MMI</label>
